--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,6 @@
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #000000;
-    height: 100vh;
     overflow-x: hidden;
     width: 100%;
   }
@@ -13,9 +12,16 @@
     width:60%;
 }  
 .img-container{
-    width: auto;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
     background-image: url('../images/comunidad.jpg');
-    opacity: 50%;
+    background-size: cover;
+        -moz-background-size: cover;
+        -webkit-background-size: cover;
+        -o-background-size: cover;
+    opacity: 75%; 
+    outline-color: #000000;
     
 }
 .label-login{
@@ -32,10 +38,18 @@
     align-items:center;
   }
 
-#loginColL{
-    margin-top: 20%;
-    margin-left: 5%;
+.logoApp{
+  width: auto;
+  height: auto;
+  margin-top: 50%;
+}
+
+#login-col-L{
+    margin-right: 20%;
   }
-#loginColR{
-    margin-top: 20%;
+#login-col-R{
+    margin-bottom: 5%;
+    margin-top: 18%;
+    margin-right: 10%;
+    margin-left: 0%;
   }
