--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@
     color: #000000;
     overflow-x: hidden;
     width: 100%;
+    height: 100vh;
 }
 .login-container{
     margin-left: 0;
@@ -29,16 +30,7 @@
   padding: 5px;
   margin: auto;
 }
-.form-input {
-    width: 10px;
-    height: 50%;
-    align-items:center;
-}
-.logoApp{
-  width: auto;
-  height: auto;
-  margin-top: 50%;
-}
+
 #login-col-L{
     margin-right: 20%;
 }
@@ -65,6 +57,10 @@
 }
 .colHome {
   width: 100%;
+}
+.rowHome {
+  width: 100%;
+  height: 100%;
 }
 
 .bootstrap-btn {
