--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,14 +8,11 @@
     width: 100%;
     height: 100vh;
 }
-.login-container{
-    margin-left: 0;
-    width: 50%;
-}  
+
+
 .img-container{
     width: 100%;
     height: 100%;
-    margin: 0 auto;
     background-image: url('../images/comunidad.jpg');
     background-size: cover;
         -moz-background-size: cover;
@@ -31,30 +28,23 @@
   margin: auto;
 }
 
-#login-col-L{
-    margin-right: 20%;
-}
-#login-col-R{
-    margin: auto;
-}
-
 .navBar {
   background-color: #29738f;
   border: none;
-  border-radius: 0;
 }
 
 .componentsNavBar{
   text-align: center;
   vertical-align: middle;
   width: 20%;
-  margin: auto;
+  height: auto;
   color: antiquewhite;
 }
 .componentsNavBar:hover{
-  color: #505050;
+  color: #fff;
   cursor:pointer;
 }
+
 .colHome {
   width: 100%;
 }
@@ -76,5 +66,10 @@
 }
 
 .bootstrap-btn:hover{
-  	background-color: #5c5047;
+  transition: 0.5s;
+  background-color: #5c5047;
+}
+.screen{
+  width: 100%;
+  height: 100%;
 }
