--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,15 +8,17 @@
     width: 100%;
     height: 100vh;
 }
+
 /* MAIN */
 .screen{
   width: 100%;
   height: 100%;
 }
+
 li {list-style:none;}
 
+/* -> Components <- */
 /* FORM LOGIN */
-
 .label-login{
   text-align: left;
   color: #000000 ;
@@ -24,12 +26,14 @@ li {list-style:none;}
   padding: 5px;
   margin: auto;
 }
+
 /* NAV BAR */
 .navBar {
   background-color: #29738f;
   border: none;
   display: flex;
 }
+
 .componentsNavBar{
   text-align: center;
   vertical-align: middle;
@@ -37,10 +41,12 @@ li {list-style:none;}
   height: auto;
   color: antiquewhite;
 }
+
 .componentsNavBar:hover{
   color: #fff;
   cursor:pointer;
 }
+
 .bootstrap-btn {
 	display: inline-block;
 	color: #f1f1f1;
@@ -56,6 +62,68 @@ li {list-style:none;}
 .bootstrap-btn:hover{
   transition: 0.5s;
   background-color: #5c5047;
+}
+
+
+/* -> Views <- */
+
+/* Extra */
+#full{
+  margin: 0;
+  padding: 0;
+}
+
+/* HOME */
+#col-R-home{
+  margin: 0;
+  padding: 0;
+  align-items: center;
+}
+
+#grid-top-home{
+  height: 95%;
+  margin: 0;
+  padding: 0;
+}
+
+#grid-bottom-home{
+  height: 5%;
+  margin: 0;
+  padding: 0;
+}
+
+#position-form-home{
+  position: absolute;
+  width: 50%;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+/* LOGIN OWNER */
+#grid-bottom-log-owner{
+  height: 94%;
+  margin: 0;
+  padding: 0;
+}
+
+#grid-top-log-owner{
+  height: 6%;
+}
+
+#graph-top{
+  height: 50%;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(52, 52, 52);
+}
+
+#graph-bottom{
+  height: 50%;
+  margin: 0;
+  padding: 0;
+  background-color: rgb(246, 246, 246);
 }
 
 .centerImage{
