Estructura de avisos hecha, proximo entregas

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,24 @@
 li {list-style:none;}
 
 /* -> Components <- */
+/* FOOTER */
+#footer-networks{
+  color: white;
+  align-content: center;
+  align-items: center;
+  max-height: 100%;
+  max-width: 100%;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  background-color: #29738f;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+#network{
+  height: 100%;
+  margin-left: 5%;
+}
 /* FORM LOGIN */
 .label-login{
   text-align: left;
@@ -79,6 +97,38 @@ li {list-style:none;}
   cursor: pointer;
   filter: grayscale(0);
 }
+.title{
+  font-size:xx-large;
+}
+.back-icon{
+  height: 50%;
+  width: 50%;
+  color: #29738f;
+}
+#grid-top{
+  height: 95%;
+  margin: 0;
+  padding: 0;
+}
+#grid-bottom{
+  height: 5%;
+  margin: 0;
+  padding: 0;
+}
+#topR{
+  height: 10%;
+  align-content: center;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+#bottomR{
+  height: 90%;
+  margin: 0;
+  padding: 0;
+}
+
 
 /* HOME */
 #col-R-home{
@@ -144,34 +194,4 @@ li {list-style:none;}
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
- /* BOOKING COURTS*/
- #title{
-  font-size:xx-large;
-}
-#title-booking{
-  height: 10%;
-  align-content: center;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-}
-#back-icon{
-  height: 50%;
-  width: 50%;
-  color: #29738f;
-}
-#courts{
-  height: 90%;
-  margin: 0;
-  padding: 0;
-}
-#grid-top-booking{
-  height: 95%;
-  margin: 0;
-  padding: 0;
-}
-#grid-bottom-booking{
-  height: 5%;
-  margin: 0;
-  padding: 0;
-}
+
