--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,7 @@
     -moz-osx-font-smoothing: grayscale;
     text-align: center;
     color: #000000;
+    background-color: rgb(253, 253, 253);
     overflow-x: hidden;
     width: 100%;
     height: 100vh;
@@ -56,6 +57,9 @@ li {list-style:none; vertical-align: middle;}
   padding: 5px;
   margin: auto;
 }
+#forgot-password:hover{
+  cursor:pointer;
+}
 
 /* NAV BAR */
 .navBar {
@@ -104,14 +108,14 @@ li {list-style:none; vertical-align: middle;}
   margin: 0;
   padding: 0;
 }
-/* #full img{
+#courts {
   filter: grayscale(1);
   transition: all 300ms;
 }
-#full img:hover{
+#courts:hover{
   cursor: pointer;
   filter: grayscale(0);
-} */
+} 
 .title{
   font-size:xx-large;
 }
