Reserva de pista de tenis vista en proceso

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -92,7 +92,7 @@ li {list-style:none; vertical-align: middle;}
 	font-size: 1rem;
 	line-height: 1.5;
 	border-radius: .25rem;
-	background-color: #b6621d;
+	background-color: #ff7300;
 }
 .fa-left-long{filter:drop-shadow(3px 3px 3px #133744)}
 .bootstrap-btn:hover{
