--- a/vue-front/static/css/style.css
+++ b/vue-front/static/css/style.css
@@ -17,6 +17,19 @@
   height: 100%;
 }
 
+input:invalid+span:after {
+  position: center;
+  content: '✖';
+  color: #bd1d08;
+  padding-left: 5px;
+}
+
+input:valid+span:after {
+  position: center;
+  content: '✓';
+  color: #05ac2f;
+  padding-left: 5px;
+}
 li {list-style:none; vertical-align: middle;}
 /* Extra */
 .centerImage{
