--- a/vue-front/static/css/style.css
+++ b/vue-front/static/css/style.css
@@ -10,6 +10,7 @@
     overflow-x: hidden;
     width: 100%;
     height: 100vh;
+    
 }
 /* MAIN */
 .screen{
@@ -51,42 +52,33 @@ li {list-style:none; vertical-align: middle;}
   justify-content: center;
   width: 100%;
   }
-/*President*/  
-.buttonHomeMenuP {
-    width: 100px;
-    height: 100px;
-    background-color: #175064 !important;
-    color: #ffffff !important;
-    font-size: 50px !important;
-    display: inline-flex !important;
-    align-items: center !important;
-    justify-content: center;
-}
-/*Owner*/  
-.buttonHomeMenuO {
+.buttonHomeMenu {
+  border: none;           
   width: 100px;
   height: 100px;
-  background-color: #5394ac !important;
-  color: #ffffff !important;
+  background: rgb(23,80,100);
+  background: linear-gradient(222deg, rgba(23,80,100,1) 0%, rgba(83,148,172,1) 100%); 
+  color: #f1f1f1 !important;
   font-size: 50px !important;
   display: inline-flex !important;
   align-items: center !important;
   justify-content: center;
 }
-/*Building Doorman*/  
-.buttonHomeMenuB {
-  width: 100px;
-  height: 100px;
-  background-color: #024146f3 !important;
-  color: #ffffff !important;
-  font-size: 50px !important;
-  display: inline-flex !important;
-  align-items: center !important;
-  justify-content: center;
+.buttonHomeMenu:hover{
+  box-shadow:
+       inset 0 -3em 3em rgba(0,0,0,0.1),
+             0 0  0 2px rgb(255, 255, 255),
+             0.3em 0.3em 1em rgba(0,0,0,0.3);
+  color:#ffffff!important;
+  border: none;
+  background-color: rgb(50, 137, 169);
+  background: linear-gradient(222deg, rgb(50, 137, 169) 0%, rgb(119, 157, 171) 100%);
 }
 
 /* FOOTER */
 #footer-networks{
+  box-shadow: 0px 9px 41px 0px rgba(140,140,140,1);
+  text-shadow: 0.1em 0.1em 0.05em #333;
   color: white;
   align-content: center;
   align-items: center;
@@ -94,10 +86,11 @@ li {list-style:none; vertical-align: middle;}
   max-width: 100%;
   height: 100%;
   width: 100%;
+  background: rgb(1,30,41);
+  background: linear-gradient(222deg, rgba(1,30,41,1) 0%, rgba(83,148,172,1) 100%);
   margin: 0;
   padding: 0;
-  background-color: #29738f;
-  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-attachment: local;
 }
 #network{
   height: 100%;
@@ -118,24 +111,34 @@ li {list-style:none; vertical-align: middle;}
 /* NAV BAR */
 /* Owner */
 .navBarO {
-  background-color: #5394ac;
+  text-shadow: 0.05em 0.05em 0.10em #333;
+  box-shadow: 5px 5px 10px;
+  background: rgb(23,80,100);
+  background: linear-gradient(222deg, rgba(23,80,100,1) 0%, rgba(83,148,172,1) 100%);
   border: none;
   display: flex;
 }
 /* Admin */
 .navBarA {
+  text-shadow: 0.05em 0.05em 0.10em #333;
+  box-shadow: 5px 5px 10px;
   background-color: #011e29;
   border: none;
   display: flex;
 }
 /* President */
 .navBarP {
-  background-color: #175064;
+  text-shadow: 0.05em 0.05em 0.10em #333;
+  box-shadow: 5px 5px 10px;
+  background: rgb(23,80,100);
+  background: linear-gradient(222deg, rgba(23,80,100,1) 0%, rgba(83,148,172,1) 100%);
   border: none;
   display: flex;
 }
 /* BuildingDoorman */
 .navBarB {
+  text-shadow: 0.05em 0.05em 0.10em #333;
+  box-shadow: 5px 5px 10px;
   background-color: #024146f3;
   border: none;
   display: flex;
@@ -152,11 +155,13 @@ li {list-style:none; vertical-align: middle;}
 }
 
 .componentsNavBar:hover{
-  color: #fff;
   cursor:pointer;
+  text-shadow: 0.15em 0.15em 0.10em #333;
+  color:#edb586;
 }
 
 .bootstrap-btn {
+  text-shadow: 0.05em 0.05em 0.02em #333;
 	display: inline-block;
 	color: #f1f1f1;
 	text-align: center;
@@ -165,12 +170,15 @@ li {list-style:none; vertical-align: middle;}
 	font-size: 1rem;
 	line-height: 1.5;
 	border-radius: .25rem;
-	background-color: #ff7300;
+	background-color: #f88424;
 }
 .fa-left-long{filter:drop-shadow(3px 3px 3px #133744)}
 .bootstrap-btn:hover{
-  transition: 0.5s;
-  background-color: #d1854b;
+  text-shadow: 0.1em 0.1em 0.05em #333;
+  transition: 0.2s;
+  background-color: #ff7300;
+  box-shadow: 1px 1px 2.5px;
+
 }
 
 
@@ -183,10 +191,12 @@ li {list-style:none; vertical-align: middle;}
 }
 #courts {
   filter: grayscale(1);
-  transition: all 300ms;
+  opacity: 70%;
+  transition: all 200ms;
 }
 #courts:hover{
   cursor: pointer;
+  opacity: 100%;
   filter: grayscale(0);
 } 
 .title{
@@ -257,21 +267,18 @@ li {list-style:none; vertical-align: middle;}
 }
 
 #grid-top-log{
+  margin: 0;
+  padding: 0;
   height: 6%;
 }
 /* LOGIN President */
 #graph-top{
+  /* margin-top: 1%; */
   height: 50%;
-  margin: 0;
-  padding: 0;
-  background-color: rgb(52, 52, 52);
 }
 
 #graph-bottom{
   height: 50%;
-  margin: 0;
-  padding: 0;
-  background-color: rgb(246, 246, 246);
 }
 
 
