--- a/vue-front/static/css/style.css
+++ b/vue-front/static/css/style.css
@@ -17,7 +17,7 @@
   width: 100%;
   height: 100%;
 }
-
+/* 
 input:invalid+span:after {
   position: center;
   content: '✖';
@@ -30,7 +30,7 @@ input:valid+span:after {
   content: '✓';
   color: #05ac2f;
   padding-left: 5px;
-}
+} */
 li {list-style:none; vertical-align: middle;}
 /* Extra */
 .centerImage{
