Alta de comuniades hecha, gestion de propietarios de cada comunidad tamnien

--- a/vue-front/static/css/style.css
+++ b/vue-front/static/css/style.css
@@ -312,7 +312,7 @@ li {list-style:none; vertical-align: middle;}
   padding-bottom: 1%;
   margin-bottom: 5px;
   text-align: center;
-  color: #989090;
+  color: #ffffff;
   padding-top: 1%;
   padding-left:1%;  
 }
