--- a/vue-front/static/css/style.css
+++ b/vue-front/static/css/style.css
@@ -65,10 +65,9 @@ li {list-style:none; vertical-align: middle;}
   justify-content: center;
 }
 .buttonHomeMenu:hover{
-  box-shadow:
-       inset 0 -3em 3em rgba(0,0,0,0.1),
-             0 0  0 2px rgb(255, 255, 255),
-             0.3em 0.3em 1em rgba(0,0,0,0.3);
+    -webkit-box-shadow: 1px 2px 5px 0px rgba(2,65,70,1);
+  -moz-box-shadow: 1px 2px 5px 0px rgba(2,65,70,1);
+  box-shadow: 1px 2px 5px 0px rgba(2,65,70,1);
   color:#ffffff!important;
   border: none;
   background-color: rgb(50, 137, 169);
