--- a/vue-front/static/css/style.css
+++ b/vue-front/static/css/style.css
@@ -12,10 +12,15 @@
     height: 100vh;
     
 }
+
+nav {
+  z-index: 1;
+}
 /* MAIN */
 .screen{
   width: 100%;
   height: 100%;
+  background-color: white;
 }
 /* 
 input:invalid+span:after {
