--- a/vue-front/static/css/style.css
+++ b/vue-front/static/css/style.css
@@ -12,32 +12,29 @@
     height: 100vh;
     
 }
-
-nav {
-  z-index: 1;
-}
 /* MAIN */
 .screen{
   width: 100%;
   height: 100%;
   background-color: white;
 }
-/* 
-input:invalid+span:after {
-  position: center;
-  content: '✖';
-  color: #bd1d08;
-  padding-left: 5px;
+nav {
+  z-index: 1;
 }
 
-input:valid+span:after {
-  position: center;
-  content: '✓';
-  color: #05ac2f;
-  padding-left: 5px;
-} */
 li {list-style:none; vertical-align: middle;}
 /* Extra */
+.msgE {
+  text-align: left;
+  margin-top: 0%;
+}
+.msgE2{
+  display: none !important;
+  margin-top: 0%;
+}
+.bootstrap-btn {
+  font-size: 0.8rem;
+}
 .centerImage{
   position: absolute;
   height:auto;
@@ -243,7 +240,6 @@ li {list-style:none; vertical-align: middle;}
 
 
 /* HOME */
-
 #grid-top-home{
   height: 95%;
   margin: 0;
@@ -277,7 +273,6 @@ li {list-style:none; vertical-align: middle;}
 }
 /* LOGIN President */
 #graph-top{
-  /* margin-top: 1%; */
   max-height: 50%;
 }
 
@@ -285,8 +280,6 @@ li {list-style:none; vertical-align: middle;}
   max-height: 50%;
 }
 
-
-/* Deliveries*/
 #bottomR-middle{
   align-content: center;
   height: 60%;
@@ -328,7 +321,6 @@ li {list-style:none; vertical-align: middle;}
 
 .container tr:nth-child(odd) {
   background-color: #da690e;
-  /* background: linear-gradient(222deg, #ea6d06 0%, #e8af80); */
 }
 .action-table{
   font-size: 13px !important;
