--- a/vue-front/static/css/style.css
+++ b/vue-front/static/css/style.css
@@ -186,6 +186,7 @@ li {list-style:none; vertical-align: middle;}
   filter: grayscale(1);
   opacity: 70%;
   transition: all 200ms;
+  height: 400px;
 }
 #courts:hover{
   cursor: pointer;
